Initial naive bayes implementation

--- a/lab3py/lab3.ipynb
+++ b/lab3py/lab3.ipynb
@@ -34,28 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'sklearn'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-8d90496242e5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmisc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mimp\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mreload\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mlabfuns\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrandom\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/KTH-Courses/Machine Learning/lab3py/labfuns.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolors\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mColorConverter\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mrandom\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mrnd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatasets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msamples_generator\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmake_blobs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdecomposition\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtree\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from scipy import misc\n",
     "from imp import reload\n",
     "from labfuns import *\n",
-    "import random"
+    "import random\n",
+    "import math"
    ]
   },
   {
@@ -84,14 +72,14 @@
     "        W = np.ones((Npts,1))/Npts\n",
     "    else:\n",
     "        assert(W.shape[0] == Npts)\n",
-    "    classes = np.unique(labels)\n",
+    "    classes, counts = np.unique(labels, return_counts=True)\n",
     "    Nclasses = np.size(classes)\n",
     "\n",
     "    prior = np.zeros((Nclasses,1))\n",
-    "\n",
-    "    # TODO: compute the values of prior for each class!\n",
-    "    # ==========================\n",
     "    \n",
+    "    # compute the values of prior for each class!\n",
+    "    # ==========================\n",
+    "    prior = counts / Npts\n",
     "    # ==========================\n",
     "\n",
     "    return prior\n",
@@ -104,7 +92,7 @@
     "def mlParams(X, labels, W=None):\n",
     "    assert(X.shape[0]==labels.shape[0])\n",
     "    Npts,Ndims = np.shape(X)\n",
-    "    classes = np.unique(labels)\n",
+    "    classes, counts = np.unique(labels, return_counts=True)\n",
     "    Nclasses = np.size(classes)\n",
     "\n",
     "    if W is None:\n",
@@ -113,9 +101,21 @@
     "    mu = np.zeros((Nclasses,Ndims))\n",
     "    sigma = np.zeros((Nclasses,Ndims,Ndims))\n",
     "\n",
-    "    # TODO: fill in the code to compute mu and sigma!\n",
+    "    # compute mu and sigma!\n",
+    "    # we split data by class and calculate the mean and covariance per class\n",
+    "    # assume features are uncorrelated so off diagonal covariance elements are 0. \n",
+    "    # sigma[i] = diagonal element of covariance mat at index i\n",
     "    # ==========================\n",
-    "    \n",
+    "    X_by_class = [X[np.where(labels==label)] for label in classes]\n",
+    "    mu = np.array([np.mean(class_data,0) for class_data in X_by_class])\n",
+    "    for i in range(Nclasses): # TODO could change this to list comprehension or vectorise this whole thing if speedup needed\n",
+    "        X_i = X_by_class[i] # xs corresponding to class classes[i]\n",
+    "        sigma_mat = X_i - mu[i]\n",
+    "        diagonal_sigma_i = np.sum(sigma_mat*sigma_mat, axis=1) / counts[i]\n",
+    "        np.fill_diagonal(sigma[i], diagonal_sigma_i = np.sum(sigma_mat*sigma_mat, axis=1) / counts[i])\n",
+    "        \n",
+    "    assert mu.shape == (Nclasses,Ndims)\n",
+    "    assert sigma.shape == (Nclasses,Ndims,Ndims)\n",
     "    # ==========================\n",
     "\n",
     "    return mu, sigma\n",
@@ -130,10 +130,22 @@
     "    Npts = X.shape[0]\n",
     "    Nclasses,Ndims = np.shape(mu)\n",
     "    logProb = np.zeros((Nclasses, Npts))\n",
-    "\n",
-    "    # TODO: fill in the code to compute the log posterior logProb!\n",
-    "    # ==========================\n",
+    "    logPriors = np.array([math.log(p) for p in prior] # TODO might not be needed\n",
     "    \n",
+    "    # compute the log posterior logProb i.e. discriminant function based on the log posterior\n",
+    "    # ==========================\n",
+    "    # inverse of diagonal covariance matrix has 1 / diagonal as its diagonal\n",
+    "    inv_sigma = 1 / sigma\n",
+    "    # determinant of a diagonal matrix is the product of its diagonal \n",
+    "    # we calculate the deterimant of each class' covariance matrix\n",
+    "    deteriminant_sigma = [np.product(np.diagonal(sigma[i])) for i in range(Nclasses)] \n",
+    "    log_det_sigma = [-0.5 * math.log(d) for d in determinant_sigma]\n",
+    "\n",
+    "    for i in range(Nclasses): # TODO speed up\n",
+    "        sigma_term = (X - mu[i]) * np.diagonal(sigma[i]) * (X - mu[i]) \n",
+    "        discriminant = log_det_sigma[i] - sigma_term + logPriors[i]                  \n",
+    "        logProb[i,:] = discriminant\n",
+    "        \n",
     "    # ==========================\n",
     "    \n",
     "    # one possible way of finding max a-posteriori once\n",
@@ -143,18 +155,30 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0, 1, 2]), array([1, 1, 2]))"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "The implemented functions can now be summarized into the `BayesClassifier` class, which we will use later to test the classifier, no need to add anything else here:"
+    "# TODO generate test data using genBlobs and compute ML estimates for data\n",
+    "# plot 95%-confidence interval using plotGaussians\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# NOTE: no need to touch this\n",
@@ -171,6 +195,13 @@
     "\n",
     "    def classify(self, X):\n",
     "        return classifyBayes(X, self.prior, self.mu, self.sigma)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The implemented functions can now be summarized into the `BayesClassifier` class, which we will use later to test the classifier, no need to add anything else here:"
    ]
   },
   {
