got rid of some TODOs

--- a/lab3py/lab3.ipynb
+++ b/lab3py/lab3.ipynb
@@ -78,7 +78,7 @@
     "    if W is None:\n",
     "        W = np.ones((Npts,1))/Npts\n",
     "    else:\n",
-    "        assert(W.shape[0] == Npts) #TODO is there a reason why this is the only one which is not float(Npts)??\n",
+    "        assert(W.shape[0] == Npts) \n",
     "    classes, counts = np.unique(labels, return_counts=True)\n",
     "    Nclasses = np.size(classes)\n",
     "\n",
@@ -118,7 +118,7 @@
     "    for i in range(Nclasses): \n",
     "        X_i = X_by_class[i] # xs corresponding to class classes[i]\n",
     "        sigma_mat = X_i - mu[i]\n",
-    "        diagonal_sigma_i = np.sum(sigma_mat*sigma_mat, axis=0) / counts[i] #TODO don't we need a float() here as well??\n",
+    "        diagonal_sigma_i = np.sum(sigma_mat*sigma_mat, axis=0) / counts[i] \n",
     "        np.fill_diagonal(sigma[i], diagonal_sigma_i)\n",
     "        \n",
     "    # ==========================\n",
@@ -135,7 +135,7 @@
     "    Npts = X.shape[0]\n",
     "    Nclasses,Ndims = np.shape(mu)\n",
     "    logProb = np.zeros((Nclasses, Npts))\n",
-    "    logPriors = np.array([math.log(p) for p in prior]) # TODO might not be needed...numpy has an element-wise log()\n",
+    "    logPriors = np.log(prior) \n",
     "    \n",
     "    # compute the log posterior logProb i.e. discriminant function based on the log posterior\n",
     "    # ==========================\n",
