--- a/lab3py/lab3.ipynb
+++ b/lab3py/lab3.ipynb
@@ -345,7 +345,18 @@
    "source": [
     "### Questions Assignments 1-3\n",
     "#### 1. When can a feature independence assumption be reasonable and when not?\n",
-    "#### 2. How does the decision boundary look for the Iris dataset? How could one improve the classification results for this scenario by changing classifier or, alternatively, manipulating the data?"
+    "When features are reasonably independent (not full conditional independence between features but almost), assuming they are are independent is a good idea as it simplifies the MAP expression to Pr(class) * product of Pr(feature|class) across all features. For example, the feature independence assumption + Naive Bayes works well for medical diagnosis where symptoms can be assumed to be reasonably independent/ \n",
+    "\n",
+    "Assuming features are independent would not work when you have correlated features e.g. age and height for 1-16 year olds as Pr(x1,...,xD|y) / Pr(x1,...,xD) is not proportional to product of Pr(xi|y).\n",
+    "\n",
+    "#### 2. How does the decision boundary look for the Iris dataset? How could one improve the classification results for this scenario by changing classifier or, alternatively, manipulating the data?\n",
+    "The decision boundary for the Iris dataset separates out Class 0 well from the rest of the data, however there is some classification error of datapoints from Class 1 and 2 because the decision boundary does not quite separate these points well. \n",
+    "\n",
+    "Performing cross validation and including different points in the train and test set could produce better classification results since at least half of the misclassified points in Class 1 and 2 were from thes test set, so increasing the proportion of data used in training/validation and performing cross validation might produce a better decision boundary. We could also resample from the points according to the missclassification error (boosting) and attempt to classify using hte bootstrap method.\n",
+    "\n",
+    "Transforming the data into a higher dimension might also help (using PCA) improve classification (to be confirmed empirically). We could also use a random forest to perform feature selection and reduce the number of features to make classification easier for the Naive Bayes classifier and potentially end up with higher classification accuracy. \n",
+    "\n",
+    "We could imagine that an SVM classifier with some slack or a polynomial kernel might be able to separate these points better (using 1 vs all approach) as the class 2 and class 1 points are not linearly separable but using a kernel/slack would help overcome this. \n"
    ]
   },
   {
@@ -781,10 +792,13 @@
    "source": [
     "### Questions Assignments 4-5\n",
     "#### 1. Is there any improvement in classification accuracy? Why/why not?\n",
-    "The classification improved improved, since the decision boundary became more complex which allows more correct classifications.\n",
+    "The classification has improved - for the iris from 89% to 89.9% and for the vowel dataset we noticed a higher increase in performacne from 64.7% to 79.6%. From the plots shown, we can see that the decision boundary became more complex which led to higher accuracy in classification.\n",
+    "\n",
     "#### 2. Comparison between boosted classifier on iris and basic Naive Bayes. What differences do you notice? Is the boundary of the boosted version more complex?\n",
     "Compared to the basic Naive Bayes the decision boundary became more complex in the boosted version. The decision boundary fits better to the structure/layout of the clusters.\n",
-    "#### 3. Can we make up for not using a more advanced model in the basic classifier (e.g. independent features) by using boosting?"
+    "\n",
+    "#### 3. Can we make up for not using a more advanced model in the basic classifier (e.g. independent features) by using boosting?\n",
+    "As long as the classification error is less than 50% for the basic classifiers, we can apply boosting to increase classification accuracy (shown mathematically, can achieve > 90% accuracy with 1.96 std?). "
    ]
   },
   {
@@ -1002,10 +1016,14 @@
    "source": [
     "### Questions Assignments 6 - Decision Trees\n",
     "#### 1. Is there any improvement in classification accuracy? Why/why not?\n",
-    "There is an improvement in classification accuracy, since the decision tree can find a simple decision boundary which minimises the number of misclassifications.\n",
+    "The decision tree in general performs better than Naive Bayes as it allows a more complex decision boundary (92% vs 89% for iris dataset), which reduces the number of misclassifications. Boosting increases the classification accuracy for the decision tree on the vowel dataset by 21.9% compared to the normal decision tree model as the normal decision tree seems to have just found a linear separator as the optimal decision boundary, whereas the boosted version is more complex (combining multiple decision trees) and hence achieves higher accuracy.\n",
+    "\n",
     "#### 2. Comparison between boosted classifier on iris and basic decision tree. What differences do you notice? Is the boundary of the boosted version more complex?\n",
-    "The boosted classifier achieves an even higher classification accuracy than the basic decision tree, since it uses a more complex decision boundary which reduces the number misclassifications even more.\n",
-    "#### 3. Can we make up for not using a more advanced model in the basic classifier (e.g. independent features) by using boosting?"
+    "\n",
+    "The boosted classifier achieves a higher classification accuracy than the basic decision tree, since it uses a more complex decision boundary which reduces the number misclassifications even more.\n",
+    "\n",
+    "#### 3. Can we make up for not using a more advanced model in the basic classifier (e.g. independent features) by using boosting?\n",
+    "Yes - same answer as before."
    ]
   },
   {
@@ -1015,7 +1033,16 @@
     "### Questions Assignment 7 - Comparison of naive Bayes vs Decision trees vs boosted versions\n",
     "#### If you had to pick a classifier, naive Bayes or a decision tree or the boosted versions of these, which one would you pick? \n",
     "#### Motivate from the following criteria:\n",
-    "`Outliers; Irrelevant inputs: part of the feature space is irrelevant; Predictive power; Mixed types of data: binary, categorical or continuous features, etc; Scalability: the dimension of the data, D, is large or the number of instances, N, is large, or both.`\n"
+    "`Outliers; Irrelevant inputs: part of the feature space is irrelevant; Predictive power; Mixed types of data: binary, categorical or continuous features, etc; Scalability: the dimension of the data, D, is large or the number of instances, N, is large, or both.`\n",
+    "\n",
+    "Boosted versions would be prefereable when we have irrelevant inputs as the combination of weak classifiers using smapled data makes the model more robust to the data distribution chosen, unlike Naive Bayes and Decision trees.\n",
+    "\n",
+    "As for predicted power, we have seen that the best results were obtained from boosted decision trees. Basic decision trees performed better than the basic naive bayes due to the more compelx decision boundary, hence we would expect the boosted version to perform better than the boosted naive bayes - which indeed did turn out to be the case. \n",
+    "\n",
+    "With mixed type of data, decision trees (and the boosted version) would work best as it branches based on the feature with the highest reduction in entropy (and hence we do not need features to be the same type as we calculate entropy based on each feature independently), whereas to apply naive bayes we would need to transform the data all into the same kind of data (e.g. using one-hot encoding for categoric data, binning for categorical data and then applying one-hot encoding). \n",
+    "\n",
+    "Naive Bayes does not suffer from the curse of dimensionality and so would be robust in the case of high dimensional data. On the other hand, with multiple compelx interacting features, decision trees do not perform as well. In the case of a  large number of classes, decision trees do not perform well as they become over-complex and increase the risk of overfitting. However, decision trees work better when the number of data points increase (naive bayes also performs well but decision trees will usually outperform). The boosted versions *should* achieve higher accuracy but at the cost of extra time. \n",
+    "\n"
    ]
   },
   {
@@ -1117,17 +1144,6 @@
     "# the class that the test point was classified to belong to\n",
     "visualizeOlivettiVectors(xTr[yTr == yPr[testind],:], xTe[testind,:])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "is_executing": true
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1146,15 +1162,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.0"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
