fixed some typos

--- a/lab3py/lab3.ipynb
+++ b/lab3py/lab3.ipynb
@@ -345,16 +345,16 @@
    "source": [
     "### Questions Assignments 1-3\n",
     "#### 1. When can a feature independence assumption be reasonable and when not?\n",
-    "When features are reasonably independent (not full conditional independence between features but almost), assuming they are are independent is a good idea as it simplifies the MAP expression to Pr(class) * product of Pr(feature|class) across all features. For example, the feature independence assumption + Naive Bayes works well for medical diagnosis where symptoms can be assumed to be reasonably independent/ \n",
+    "When features are reasonably independent (not full conditional independence between features but almost), assuming they are independent is a good idea as it simplifies the MAP expression to Pr(class) * product of Pr(feature|class) across all features. For example, the feature independence assumption + Naive Bayes works well for, e.g., favourite colour and preferred operating system.\n",
     "\n",
     "Assuming features are independent would not work when you have correlated features e.g. age and height for 1-16 year olds as Pr(x1,...,xD|y) / Pr(x1,...,xD) is not proportional to product of Pr(xi|y).\n",
     "\n",
     "#### 2. How does the decision boundary look for the Iris dataset? How could one improve the classification results for this scenario by changing classifier or, alternatively, manipulating the data?\n",
     "The decision boundary for the Iris dataset separates out Class 0 well from the rest of the data, however there is some classification error of datapoints from Class 1 and 2 because the decision boundary does not quite separate these points well. \n",
     "\n",
-    "Performing cross validation and including different points in the train and test set could produce better classification results since at least half of the misclassified points in Class 1 and 2 were from thes test set, so increasing the proportion of data used in training/validation and performing cross validation might produce a better decision boundary. We could also resample from the points according to the missclassification error (boosting) and attempt to classify using hte bootstrap method.\n",
+    "Performing cross validation and including different points in the train and test set could produce better classification results since at least half of the misclassified points in Class 1 and 2 were from the test set, so increasing the proportion of data used in training/validation and performing cross validation might produce a better decision boundary. We could also resample from the points according to the misclassification error (boosting) and attempt to classify using the bootstrap method.\n",
     "\n",
-    "Transforming the data into a higher dimension might also help (using PCA) improve classification (to be confirmed empirically). We could also use a random forest to perform feature selection and reduce the number of features to make classification easier for the Naive Bayes classifier and potentially end up with higher classification accuracy. \n",
+    "Transforming the data into a higher dimension space or into a lower dimension space (using PCA) might also help to improve classification (to be confirmed empirically). We could also use a random forest to perform feature selection and reduce the number of features to make classification easier for the Naive Bayes classifier and potentially end up with higher classification accuracy. \n",
     "\n",
     "We could imagine that an SVM classifier with some slack or a polynomial kernel might be able to separate these points better (using 1 vs all approach) as the class 2 and class 1 points are not linearly separable but using a kernel/slack would help overcome this. \n"
    ]
@@ -374,7 +374,8 @@
    "metadata": {
     "pycharm": {
      "is_executing": false
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1035,13 +1036,13 @@
     "#### Motivate from the following criteria:\n",
     "`Outliers; Irrelevant inputs: part of the feature space is irrelevant; Predictive power; Mixed types of data: binary, categorical or continuous features, etc; Scalability: the dimension of the data, D, is large or the number of instances, N, is large, or both.`\n",
     "\n",
-    "Boosted versions would be prefereable when we have irrelevant inputs as the combination of weak classifiers using smapled data makes the model more robust to the data distribution chosen, unlike Naive Bayes and Decision trees.\n",
+    "Boosted versions would be prefereable when we have irrelevant inputs as the combination of weak classifiers using sampled data makes the model more robust to the data distribution chosen, unlike Naive Bayes and Decision trees.\n",
     "\n",
     "As for predicted power, we have seen that the best results were obtained from boosted decision trees. Basic decision trees performed better than the basic naive bayes due to the more compelx decision boundary, hence we would expect the boosted version to perform better than the boosted naive bayes - which indeed did turn out to be the case. \n",
     "\n",
     "With mixed type of data, decision trees (and the boosted version) would work best as it branches based on the feature with the highest reduction in entropy (and hence we do not need features to be the same type as we calculate entropy based on each feature independently), whereas to apply naive bayes we would need to transform the data all into the same kind of data (e.g. using one-hot encoding for categoric data, binning for categorical data and then applying one-hot encoding). \n",
     "\n",
-    "Naive Bayes does not suffer from the curse of dimensionality and so would be robust in the case of high dimensional data. On the other hand, with multiple compelx interacting features, decision trees do not perform as well. In the case of a  large number of classes, decision trees do not perform well as they become over-complex and increase the risk of overfitting. However, decision trees work better when the number of data points increase (naive bayes also performs well but decision trees will usually outperform). The boosted versions *should* achieve higher accuracy but at the cost of extra time. \n",
+    "Naive Bayes does not suffer from the curse of dimensionality and so would be robust in the case of high dimensional data. On the other hand, with multiple complex interacting features, decision trees do not perform as well. In the case of a large number of classes, decision trees do not perform well as they become over-complex and increase the risk of overfitting. However, decision trees work better when the number of data points increase (naive bayes also performs well but decision trees will usually outperform). The boosted versions *should* achieve higher accuracy but at the cost of extra time. \n",
     "\n"
    ]
   },
@@ -1162,7 +1163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.4"
   },
   "pycharm": {
    "stem_cell": {
