Ammended answers to lab3 from presentation

--- a/lab3py/lab3.ipynb
+++ b/lab3py/lab3.ipynb
@@ -1036,13 +1036,15 @@
     "#### Motivate from the following criteria:\n",
     "`Outliers; Irrelevant inputs: part of the feature space is irrelevant; Predictive power; Mixed types of data: binary, categorical or continuous features, etc; Scalability: the dimension of the data, D, is large or the number of instances, N, is large, or both.`\n",
     "\n",
-    "Boosted versions would be prefereable when we have irrelevant inputs as the combination of weak classifiers using sampled data makes the model more robust to the data distribution chosen, unlike Naive Bayes and Decision trees.\n",
+    "Non-boosted versions would be prefereable when we have irrelevant inputs as the boosted versions are less robust to outliers since they try to fit to the data more. Decision trees are also less preferable than naive bayes in the presence of outliers for the same reason.\n",
     "\n",
     "As for predicted power, we have seen that the best results were obtained from boosted decision trees. Basic decision trees performed better than the basic naive bayes due to the more compelx decision boundary, hence we would expect the boosted version to perform better than the boosted naive bayes - which indeed did turn out to be the case. \n",
     "\n",
     "With mixed type of data, decision trees (and the boosted version) would work best as it branches based on the feature with the highest reduction in entropy (and hence we do not need features to be the same type as we calculate entropy based on each feature independently), whereas to apply naive bayes we would need to transform the data all into the same kind of data (e.g. using one-hot encoding for categoric data, binning for categorical data and then applying one-hot encoding). \n",
     "\n",
-    "Naive Bayes does not suffer from the curse of dimensionality and so would be robust in the case of high dimensional data. On the other hand, with multiple complex interacting features, decision trees do not perform as well. In the case of a large number of classes, decision trees do not perform well as they become over-complex and increase the risk of overfitting. However, decision trees work better when the number of data points increase (naive bayes also performs well but decision trees will usually outperform). The boosted versions *should* achieve higher accuracy but at the cost of extra time. \n",
+    "The curse of dimensionality applies to both Naive Bayes and decision trees - when the number of dimensions, D, gets large, the complexity of naive bayes is O(D^2) (from calculating covariance matx), and with decision trees, the complexity is O(kND) where k = no. nodes, N = no. data pts and D is dimensionality (O(ND) calculating highest reduction in entropy at each node).  No. nodes is in worst case O(N), (ideally O(logN) so worst case complexity for decision tree = O(N^2D). Complexity of naive bayes > decision tree when D gets really large.\n",
+    "\n",
+    "In the case of a large number of classes, decision trees do not perform well as they become over-complex and increase the risk of overfitting. However, decision trees work better when the number of data points increase (naive bayes also performs well but decision trees will usually outperform). The boosted versions *should* achieve higher accuracy but at the cost of extra time. \n",
     "\n"
    ]
   },
@@ -1163,7 +1165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.0"
   },
   "pycharm": {
    "stem_cell": {
