Added to answers

--- a/lab3py/lab3.ipynb
+++ b/lab3py/lab3.ipynb
@@ -349,6 +349,8 @@
     "\n",
     "Assuming features are independent would not work when you have correlated features e.g. age and height for 1-16 year olds as Pr(x1,...,xD|y) / Pr(x1,...,xD) is not proportional to product of Pr(xi|y).\n",
     "\n",
+    "We could tell if features are correlated using the covariance matrix (if the numbers shift more to one side than the other i.e. non-diagonal entries aren't 0/close to 0, features are correlated).\n",
+    "\n",
     "#### 2. How does the decision boundary look for the Iris dataset? How could one improve the classification results for this scenario by changing classifier or, alternatively, manipulating the data?\n",
     "The decision boundary for the Iris dataset separates out Class 0 well from the rest of the data, however there is some classification error of datapoints from Class 1 and 2 because the decision boundary does not quite separate these points well. \n",
     "\n",
